[gd_scene load_steps=14 format=3 uid="uid://x6t1xkf6o4gu"]

[ext_resource type="PackedScene" uid="uid://b8rivn1vu6l8r" path="res://ESCENAS/PISOS/piso_01.tscn" id="1_35f3x"]
[ext_resource type="Texture2D" uid="uid://bmts3o2ms4hdd" path="res://sprites/2 Background/Night/1.png" id="1_vt88g"]
[ext_resource type="PackedScene" uid="uid://c5yw2o1ulfll8" path="res://ESCENAS/Personaje/pj_shinobi.tscn" id="2_as13n"]
[ext_resource type="Texture2D" uid="uid://c332qhan4maom" path="res://sprites/2 Background/Night/2.png" id="2_bv4fo"]
[ext_resource type="Texture2D" uid="uid://b1vsyj3t5md6q" path="res://sprites/2 Background/Night/3.png" id="3_am266"]
[ext_resource type="Texture2D" uid="uid://dcommkb7d0sxn" path="res://sprites/2 Background/Night/4.png" id="4_muf0d"]
[ext_resource type="Texture2D" uid="uid://cab4xnk8frqsb" path="res://sprites/2 Background/Night/5.png" id="5_o61x3"]
[ext_resource type="Texture2D" uid="uid://cvkf6i0vt75vs" path="res://sprites/3 Objects/Trees/1.png" id="6_bv4fo"]
[ext_resource type="Texture2D" uid="uid://dwfp76vsbq7g0" path="res://sprites/3 Objects/Other/Pointer1.png" id="7_o61x3"]
[ext_resource type="PackedScene" uid="uid://b4ki5l1wi7o3l" path="res://enemy.tscn" id="9_am266"]
[ext_resource type="PackedScene" uid="uid://5rglpkttx1ev" path="res://ESCENAS/Personaje/pj_samurai.tscn" id="10_muf0d"]
[ext_resource type="PackedScene" uid="uid://cuj1cw0cqkc47" path="res://ESCENAS/UI/geme_over_ui.tscn" id="11_gameover"]
[ext_resource type="PackedScene" path="res://ESCENAS/UI/timer_ui.tscn" id="13_timer"]
[ext_resource type="Script" path="res://ESCENAS/Nivel_1/nivel_1.gd" id="12_nivel1"]

[node name="Nivel1" type="Node2D"]
script = ExtResource("12_nivel1")

[node name="Background" type="Node2D" parent="."]
position = Vector2(0, 20)

[node name="1" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.2, 0.2)
repeat_size = Vector2(500, 0)
repeat_times = 50

[node name="Sprite2D" type="Sprite2D" parent="Background/1"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_vt88g")

[node name="2" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(500, 0)
repeat_times = 20

[node name="Sprite2D" type="Sprite2D" parent="Background/2"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_bv4fo")

[node name="3" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.7, 0.7)
repeat_size = Vector2(500, 0)
repeat_times = 20

[node name="Sprite2D" type="Sprite2D" parent="Background/3"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_am266")

[node name="4" type="Parallax2D" parent="Background"]
scroll_scale = Vector2(0.9, 0.9)
repeat_size = Vector2(500, 0)
repeat_times = 20

[node name="Sprite2D" type="Sprite2D" parent="Background/4"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("4_muf0d")

[node name="5" type="Parallax2D" parent="Background"]
repeat_size = Vector2(500, 0)
repeat_times = 20

[node name="Sprite2D" type="Sprite2D" parent="Background/5"]
scale = Vector2(1.5, 1.5)
texture = ExtResource("5_o61x3")

[node name="Ambientacion" type="Node2D" parent="."]

[node name="Trees" type="Node2D" parent="Ambientacion"]
position = Vector2(-149, 72)

[node name="Sprite2D" type="Sprite2D" parent="Ambientacion/Trees"]
position = Vector2(2180, -63)
texture = ExtResource("6_bv4fo")

[node name="Sprite2D2" type="Sprite2D" parent="Ambientacion/Trees"]
position = Vector2(-2, -6)
texture = ExtResource("6_bv4fo")

[node name="Sprite2D3" type="Sprite2D" parent="Ambientacion/Trees"]
position = Vector2(4587, -169)
scale = Vector2(2, 2)
texture = ExtResource("7_o61x3")

[node name="piso_01" parent="." instance=ExtResource("1_35f3x")]

[node name="pj_shinobi" parent="." instance=ExtResource("2_as13n")]
position = Vector2(-571, -102)

[node name="RespawnPoint" type="Node2D" parent="."]
position = Vector2(-567, -75)

[node name="Enemy" parent="." instance=ExtResource("9_am266")]
position = Vector2(2199, 55)

[node name="pj_samurai" parent="." instance=ExtResource("10_muf0d")]
position = Vector2(4474, -122)

[node name="GameOverUI" parent="." instance=ExtResource("11_gameover")]

[node name="TimerUI" parent="." instance=ExtResource("13_timer")]
